--- a/roles/zeitgeist-node-native/templates/zeitgeist-node.j2
+++ b/roles/zeitgeist-node-native/templates/zeitgeist-node.j2
@@ -18,7 +18,7 @@ ExecStart=/opt/{{ chain }}/zeitgeist_parachain \
     --rpc-port={{ rpc_listen }} \
     --ws-port={{ ws_listen }} \
     --collator \
-    --state-cache-size=0 \
+    --trie-cache-size=0 \
     --no-mdns \
     --rpc-cors=all \
     --pruning=archive \
@@ -30,9 +30,8 @@ ExecStart=/opt/{{ chain }}/zeitgeist_parachain \
     --port={{ p2p_relay_listen }} \
     --rpc-port={{ rpc_relay_listen }} \
     --ws-port={{ ws_relay_listen }} \
-    --state-cache-size=0 \
+    --trie-cache-size=0 \
     --database=paritydb \
-    --unsafe-pruning \
     --pruning=100 \
     --keep-blocks=100 \
     --execution=wasm \
